Added the CalculationCalculate and Calculation History controllers

--- a/Structured Cabling Studio/Views/Shared/_ConfigurationDisplayPartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_ConfigurationDisplayPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using static System.String
+﻿@using StructuredCablingStudioCore
+@using static System.String
 @model CablingConfiguration?
 
 <div id="configurationDisplay" class="form-control border-primary px-4 py-3">
