--- a/Structured Cabling Studio/Views/CalculationCalculate/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/CalculationCalculate/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using StructuredCablingStudio.Models.ViewModels.ConfigurationsViewModels
+﻿@using StructuredCablingStudio.Models.ViewModels.CalculationViewModels
 @using StructuredCablingStudioCore
 @using StructuredCablingStudio.Data.Entities
