--- a/Structured Cabling Studio/Views/Calculation/Information.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Information.cshtml
@@ -1,11 +1,28 @@
 ﻿<p>
-	<div>
-		@Localizer["First paragraph"]
-	</div>
-	<div>
-		@Localizer["Second paragraph"]
-	</div>
+	@Localizer["First paragraph"]
 </p>
 <p class="text-center fs-5 fw-semibold">
 	(a + b) / 2 &sdot; c &sdot; d &sdot; e
+</p>
+<div class="d-flex justify-content-center">
+	<p>
+		@Localizer["First formula description"]
+	</p>
+</div>
+<p>
+	@Localizer["Second paragraph"]
+</p>
+<p class="text-center fs-5 fw-semibold">
+	&lceil;(a &sdot; b / &lfloor;(c &divide; (((d + e) &divide; 2) &sdot; f))&rfloor;)&rceil;
+</p>
+<div class="d-flex justify-content-center">
+	<p>
+		@Localizer["Second formula description"]
+	</p>
+</div>
+<p>
+	@Localizer["Third paragraph"]
+</p>
+<p>
+	@Localizer["Fourth paragraph"] <a href="#">@Localizer["Project information link"]</a>.
 </p>
