Edited the hostiry page styles files

--- a/Structured Cabling Studio/Views/CalculationHistory/_ConfigurationsListPartial.cshtml.css
+++ b/Structured Cabling Studio/Views/CalculationHistory/_ConfigurationsListPartial.cshtml.css
@@ -1,4 +1,8 @@
-﻿.historyPageButton {
+﻿#eMailDisplayHistoryPageSpan {
+    word-break: break-word;
+}
+
+.historyPageButton {
     width: 100%;
 }
 
