Work on the Project Information page is ongoing

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 							</div>
 						</li>
 						<li class="siteNavbarLi nav-item mx-2 mx-sm-3 mx-lg-2">
-							<a class="navLinkText nav-link text-white text-center fw-semibold" href="#">
+							<a class="navLinkText nav-link text-white text-center fw-semibold" asp-controller="@nameof(Project)" asp-action="@nameof(Project.ProjectInformation)">
 								@Localizer["Project information"]
 							</a>
 						</li>
