Work on the Project Information page is ongoing

--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -1,1 +1,8 @@
-﻿
+﻿<p>
+	<span class="fs-4">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin<br /></span>
+	<span class="fs-5">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
+</p>
+<h4>
+	@Localizer["History of project"]
+</h4>
+<hr />
