--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -2,7 +2,19 @@
 	<span class="fs-4">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin<br /></span>
 	<span class="fs-5">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
 </p>
-<h4>
+<h4 class="mt-4">
 	@Localizer["History of project"]
 </h4>
 <hr />
+<p>
+	@Localizer["First paragraph"]
+</p>
+<img src="~/images/Console_SCS_Calc_Screenshot_1.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 1 of the SCS-Calc preview console version" />
+<br/>
+<img src="~/images/Console_SCS_Calc_Screenshot_2.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 2 of the SCS-Calc preview console version" />
+<div class="text-center mt-2 mb-3">
+	@Localizer["Img."] 1, 2. @Localizer["First&second image description"]
+</div>
+<p>
+	@Localizer["Second paragraph"]
+</p>
