--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -9,12 +9,40 @@
 <p>
 	@Localizer["First paragraph"]
 </p>
-<img src="~/images/Console_SCS_Calc_Screenshot_1.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 1 of the SCS-Calc preview console version" />
-<br/>
-<img src="~/images/Console_SCS_Calc_Screenshot_2.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 2 of the SCS-Calc preview console version" />
-<div class="text-center mt-2 mb-3">
-	@Localizer["Img."] 1, 2. @Localizer["First&second image description"]
+<div class="my-4">
+	<img src="~/images/Console_SCS_Calc_Screenshot_1.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 1 of the SCS-Calc preview console version" />
+	<br />
+	<img src="~/images/Console_SCS_Calc_Screenshot_2.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 2 of the SCS-Calc preview console version" />
+	<div class="text-center mt-2">
+		@Localizer["Img."] 1, 2. @Localizer["First&second image description"]
+	</div>
 </div>
 <p>
 	@Localizer["Second paragraph"]
+</p>
+<div class="my-4">
+	<img src="~/images/SCS-Calc_Desktop_Screenshot_1.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot of the SCS-Calc desktop version" />
+	<div class="text-center mt-2">
+		@Localizer["Img."] 3. @Localizer["Third image description"]
+	</div>
+</div>
+<p>
+	@Localizer["Third paragraph - link to the SCS-Calc repo"] - <a href="https://github.com/Rhoxolan/SKS-Calc" target="_blank">github.com/Rhoxolan/SKS-Calc</a>
+</p>
+<p>
+	@Localizer["Fourth paragraph"]
+</p>
+<div class="my-4">
+	<img src="~/images/SCS_Calc_1_1_Screenhot_1.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 1 of the SCS-Calc 1.1" />
+	<br />
+	<img src="~/images/SCS_Calc_1_1_Screenhot_2.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot 2 of the SCS-Calc 1.1" />
+	<div class="text-center mt-2">
+		@Localizer["Img."] 4, 5. @Localizer["Fourth&fifth image description"]
+	</div>
+</div>
+<p>
+	@Localizer["Fifth paragraph - link to the SCS-Calc 1.1 repo"] - <a href="https://github.com/Rhoxolan/SCS-Calc_1.1" target="_blank">github.com/Rhoxolan/SCS-Calc_1.1</a>
+</p>
+<p>
+	@Localizer["Sixth paragraph"]
 </p>
