Work on the Project Information page is ongoing

--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -46,3 +46,15 @@
 <p>
 	@Localizer["Sixth paragraph"]
 </p>
+<p>
+	@Localizer["Seventh paragraph"]
+</p>
+<div class="my-4">
+	<img src="~/images/SCS_Calc_2_0_Screenshot_1.png" asp-append-version="true" class="img-fluid mx-auto d-block" alt="Screenshot of the SCS-Calc 2.0" />
+	<div class="text-center mt-2">
+		@Localizer["Img."] 6. @Localizer["Sixth image description"]
+	</div>
+</div>
+<p>
+	@Localizer["Eight paragraph & link to the SCS-Calc 2.0 repo"] - <a href="https://github.com/Rhoxolan/SCS-Calc_2.0" target="_blank">github.com/Rhoxolan/SCS-Calc_2.0</a>
+</p>
