--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -58,3 +58,6 @@
 <p>
 	@Localizer["Eight paragraph & link to the SCS-Calc 2.0 repo"] - <a href="https://github.com/Rhoxolan/SCS-Calc_2.0" target="_blank">github.com/Rhoxolan/SCS-Calc_2.0</a>
 </p>
+<p>
+	@Localizer["Ninth paragraph"]
+</p>
