--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -1,6 +1,9 @@
 ﻿<p>
-	<span class="fs-4">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin<br /></span>
+	<span class="fs-4">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin</span>
+	<br />
 	<span class="fs-5">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
+	<br />
+	<span class="fs-5">@Localizer["E-Mail"] - <a href="mailto:pbaworkcontactmail@gmail.com">pbaworkcontactmail@gmail.com</a></span>
 </p>
 <h4 class="mt-4">
 	@Localizer["History of project"]
@@ -59,5 +62,5 @@
 	@Localizer["Eight paragraph & link to the SCS-Calc 2.0 repo"] - <a href="https://github.com/Rhoxolan/SCS-Calc_2.0" target="_blank">github.com/Rhoxolan/SCS-Calc_2.0</a>
 </p>
 <p>
-	@Localizer["Ninth paragraph"]
+	@Localizer["Ninth paragraph - link to the Structured Cabling Studio repo"] - <a href="https://github.com/Rhoxolan/Structured_Cabling_Studio" target="_blank">github.com/Rhoxolan/Structured_Cabling_Studio</a>
 </p>
