Added the localized page titles

--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewData["Title"] = "History";
+	ViewData["Title"] = Localizer["History page title"];
 }
 
 <div id="configurationsListBoxDiv">
