--- a/Structured Cabling Studio/Views/Calculation/Information.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Information.cshtml
@@ -1,4 +1,8 @@
-﻿<p>
+﻿@{
+	ViewData["Title"] = Localizer["Information page title"];
+}
+
+<p>
 	@Localizer["First paragraph"]
 </p>
 <p class="text-center fs-5 fw-semibold">
