--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -1,4 +1,8 @@
-﻿<p>
+﻿@{
+	ViewData["Title"] = Localizer["Project Information page title"];
+}
+
+<p>
 	<span class="fs-4">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin</span>
 	<br />
 	<span class="fs-5">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
