--- a/Structured Cabling Studio/Views/Account/AuthenticationFailed.cshtml
+++ b/Structured Cabling Studio/Views/Account/AuthenticationFailed.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AuthenticationFailedViewModel
 @{
-	ViewData["Title"] = "Authentication failed";
+	ViewData["Title"] = Localizer["Authentication failed page title"];
 }
 
 <h1>
