--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewData["Title"] = "Calculation";
+	ViewData["Title"] = Localizer["Calculation page title"];
 }
 
 <div id="calculateFormDiv">
