--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -7,7 +7,7 @@
 	<br />
 	<span class="fs-5">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
 	<br />
-	<span class="fs-5">@Localizer["E-Mail"] - <a href="mailto:pbaworkcontactmail@gmail.com">pbaworkcontactmail@gmail.com</a></span>
+	<span class="fs-5">@Localizer["E-Mail"] - <a class="projectInformaionPageA" href="mailto:pbaworkcontactmail@gmail.com">pbaworkcontactmail@gmail.com</a></span>
 </p>
 <h4 class="mt-4">
 	@Localizer["History of project"]
@@ -35,7 +35,7 @@
 		</div>
 	</div>
 	<p>
-		@Localizer["Third paragraph - link to the SCS-Calc repo"] - <a href="https://github.com/Rhoxolan/SKS-Calc" target="_blank">github.com/Rhoxolan/SKS-Calc</a>
+		@Localizer["Third paragraph - link to the SCS-Calc repo"] - <a class="projectInformaionPageA" href="https://github.com/Rhoxolan/SKS-Calc" target="_blank">github.com/Rhoxolan/SKS-Calc</a>
 	</p>
 	<p>
 		@Localizer["Fourth paragraph"]
@@ -49,7 +49,7 @@
 		</div>
 	</div>
 	<p>
-		@Localizer["Fifth paragraph - link to the SCS-Calc 1.1 repo"] - <a href="https://github.com/Rhoxolan/SCS-Calc_1.1" target="_blank">github.com/Rhoxolan/SCS-Calc_1.1</a>
+		@Localizer["Fifth paragraph - link to the SCS-Calc 1.1 repo"] - <a class="projectInformaionPageA" href="https://github.com/Rhoxolan/SCS-Calc_1.1" target="_blank">github.com/Rhoxolan/SCS-Calc_1.1</a>
 	</p>
 	<p>
 		@Localizer["Sixth paragraph"]
@@ -64,9 +64,9 @@
 		</div>
 	</div>
 	<p>
-		@Localizer["Eight paragraph & link to the SCS-Calc 2.0 repo"] - <a href="https://github.com/Rhoxolan/SCS-Calc_2.0" target="_blank">github.com/Rhoxolan/SCS-Calc_2.0</a>
+		@Localizer["Eight paragraph & link to the SCS-Calc 2.0 repo"] - <a class="projectInformaionPageA" href="https://github.com/Rhoxolan/SCS-Calc_2.0" target="_blank">github.com/Rhoxolan/SCS-Calc_2.0</a>
 	</p>
 	<p>
-		@Localizer["Ninth paragraph - link to the Structured Cabling Studio repo"] - <a href="https://github.com/Rhoxolan/Structured_Cabling_Studio" target="_blank">github.com/Rhoxolan/Structured_Cabling_Studio</a>
+		@Localizer["Ninth paragraph - link to the Structured Cabling Studio repo"] - <a class="projectInformaionPageA" href="https://github.com/Rhoxolan/Structured_Cabling_Studio" target="_blank">github.com/Rhoxolan/Structured_Cabling_Studio</a>
 	</p>
 </div>
