Edited font-size in the header information from Project information page

--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -3,11 +3,11 @@
 }
 
 <p>
-	<span class="fs-4">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin</span>
+	<span style="font-size:1.5rem;">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin</span>
 	<br />
-	<span class="fs-5">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
+	<span style="font-size:1.1rem;">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
 	<br />
-	<span class="fs-5">@Localizer["E-Mail"] - <a class="projectInformaionPageA" href="mailto:pbaworkcontactmail@gmail.com">pbaworkcontactmail@gmail.com</a></span>
+	<span style="font-size:1.1rem;">@Localizer["E-Mail"] - <a class="projectInformaionPageA" href="mailto:pbaworkcontactmail@gmail.com">pbaworkcontactmail@gmail.com</a></span>
 </p>
 <h4 class="mt-4">
 	@Localizer["History of project"]
