Edited the data logic error message logic

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -4,10 +4,15 @@
 
 @await Html.PartialAsync("_DataLoadingErrorPartial")
 
-<div id="calculateFormDiv">
+<div id="calculatePageContentDiv">
+
+	<div id="calculateFormDiv">
+	</div>
+
+	<div id="configurationDisplayDiv">
+	</div>
+
 </div>
 
-<div id="configurationDisplayDiv">
-</div>
 
 <script src="~/js/Calculate.js" asp-append-version="true"></script>
