--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -4,12 +4,16 @@
 
 @await Html.PartialAsync("_DataLoadingErrorPartial")
 
-<div id="configurationsListBoxDiv">
-</div>
+<div id="historyPageContentDiv">
 
-<input type="hidden" id="selectedConfigurationId"/>
+	<div id="configurationsListBoxDiv">
+	</div>
 
-<div id="configurationHistoryDisplayDiv">
+	<input type="hidden" id="selectedConfigurationId" />
+
+	<div id="configurationHistoryDisplayDiv">
+	</div>
+
 </div>
 
 <script src="~/js/History.js" asp-append-version="true"></script>
