--- a/Structured Cabling Studio/Views/Shared/_DataLoadingErrorPartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_DataLoadingErrorPartial.cshtml
@@ -1,3 +1,12 @@
-﻿<div id="dataLoadingErrorDiv" class="fs-3 fw-semibold text-danger d-none mb-5">
-	<i class="bi bi-exclamation-octagon" style="height:35px; width:35px;"></i> @Localizer["Data loading error"]
+﻿<div id="dataLoadingErrorDiv" class="d-none">
+	<div class="fs-3 fw-semibold text-danger">
+		<i class="bi bi-exclamation-octagon" style="height:35px; width:35px;"></i> @Localizer["Data loading error"]
+	</div>
+	<div class="my-2">
+		<button id="dataLoadingErrorReloadButton" class="btn btn-warning">
+			@Localizer["Reload"]
+		</button>
+	</div>
 </div>
+
+<script src="~/js/_DataLoadingErrorPartial.js" asp-append-version="true"></script>
