--- a/Structured Cabling Studio/Views/CalculationHistory/_ConfigurationsListPartial.cshtml
+++ b/Structured Cabling Studio/Views/CalculationHistory/_ConfigurationsListPartial.cshtml
@@ -45,15 +45,15 @@
 		</div>
 		<div class="col-11 col-sm">
 			<button id="saveToTxtButton" class="historyPageButton btn btn-outline-primary mb-2">
-				@Localizer["Save to TXT"]
+				<i class="bi bi-filetype-txt"></i> @Localizer["Save to TXT"]
 			</button>
 			<br />
-			<button id="deleteButton" class="historyPageButton btn btn-outline-primary mb-2">
-				@Localizer["Delete"]
+			<button id="deleteButton" class="historyPageButton btn btn-outline-danger mb-2">
+				<i class="bi bi-trash3"></i> @Localizer["Delete"]
 			</button>
 			<br />
-			<button id="deleteAllButton" class="historyPageButton btn btn-outline-primary mb-2">
-				@Localizer["Delete all"]
+			<button id="deleteAllButton" class="historyPageButton btn btn-outline-danger mb-2">
+				<i class="bi bi-trash3-fill"></i> @Localizer["Delete all"]
 			</button>
 			<br />
 		</div>
