--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -82,8 +82,8 @@
 			</div>
 		</nav>
 
-		<div id="mainContainerDiv" class="container mt-3 px-md-5">
-			<main role="main" class="mainContent pb-3 px-lg-5">
+		<div class="container">
+			<main role="main" class="py-2 px-lg-4">
 				@RenderBody()
 			</main>
 		</div>
