Added some icons

--- a/Structured Cabling Studio/Views/CalculationCalculate/_CalculateFormPartial.cshtml
+++ b/Structured Cabling Studio/Views/CalculationCalculate/_CalculateFormPartial.cshtml
@@ -432,7 +432,7 @@
 		<div class="row">
 			<div class="col-auto">
 				<button type="button" id="restoreDefaultsButton" class="btn btn-sm btn-outline-secondary">
-					@Localizer["Restore defaults"]
+					<i class="bi bi-gear"></i> @Localizer["Restore defaults"]
 				</button>
 			</div>
 		</div>
@@ -444,7 +444,7 @@
 		<div class="row">
 			<div class="col-auto">
 				<button type="submit" id="calculateButton" class="btn btn-lg btn-outline-primary fw-semibold">
-					@Localizer["Calculate"]
+					<i class="bi bi-calculator"></i> @Localizer["Calculate"]
 				</button>
 				<input type="hidden" id="recordTimeInput" asp-for="RecordTime" />
 			</div>
