--- a/Structured Cabling Studio/Views/CalculationCalculate/_ConfigurationDisplayCalculatePartial.cshtml
+++ b/Structured Cabling Studio/Views/CalculationCalculate/_ConfigurationDisplayCalculatePartial.cshtml
@@ -23,14 +23,14 @@
 				<form asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.SaveToTXT)" method="post">
 					<input type="hidden" name="serializedCablingConfiguration" value="@System.Text.Json.JsonSerializer.Serialize(Model, serializeroptions)">
 					<button type="submit" class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0">
-						@Localizer["Save to TXT"]
+						<i class="bi bi-filetype-txt"></i> @Localizer["Save to TXT"]
 					</button>
 				</form>
 			}
 			else
 			{
 				<button class="btn btn-outline-secondary mt-1 mb-2 mt-sm-0 mb-sm-0" disabled>
-					@Localizer["Save to TXT"]
+					<i class="bi bi-filetype-txt"></i> @Localizer["Save to TXT"]
 				</button>
 			}
 		</div>
