--- a/Structured Cabling Studio/Views/CalculationHistory/_DeleteAllConfigurationsPartial.cshtml
+++ b/Structured Cabling Studio/Views/CalculationHistory/_DeleteAllConfigurationsPartial.cshtml
@@ -10,13 +10,13 @@
 <div class="mb-3">
 	<div class="row">
 		<div class="col-auto">
-			<button id="deleteAllConfigurationsButton" class="deleteAllConfirmButton btn btn-danger">
-				@Localizer["Delete"]
+			<button id="cancelDeleteAllConfigurationsButton" class="deleteAllConfirmButton btn btn-success">
+				<i class="bi bi-caret-left"></i> @Localizer["Cancel"]
 			</button>
 		</div>
 		<div class="col-auto">
-			<button id="cancelDeleteAllConfigurationsButton" class="deleteAllConfirmButton btn btn-success">
-				@Localizer["Cancel"]
+			<button id="deleteAllConfigurationsButton" class="deleteAllConfirmButton btn btn-danger">
+				<i class="bi bi-trash3-fill"></i> @Localizer["Delete"]
 			</button>
 		</div>
 	</div>
