Added the Loading message logic

--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -8,6 +8,8 @@
 
 	<div id="historyPageContentDiv">
 
+		@await Html.PartialAsync("_LoadingPartial")
+
 		<div id="configurationsListBoxDiv">
 		</div>
 
