Edited configuration list partial view

--- a/Structured Cabling Studio/Views/CalculationHistory/_ConfigurationsListPartial.cshtml
+++ b/Structured Cabling Studio/Views/CalculationHistory/_ConfigurationsListPartial.cshtml
@@ -26,7 +26,7 @@
 									@Localizer["MinPermanentLink"] @configuration.MinPermanentLink.ToString("F2") @Localizer["m"]
 								</div>
 								<div>
-									@Localizer["MaxPermanentLink"] @configuration.MinPermanentLink.ToString("F2") @Localizer["m"]
+									@Localizer["MaxPermanentLink"] @configuration.MaxPermanentLink.ToString("F2") @Localizer["m"]
 								</div>
 								@if (configuration.HankQuantity != null)
 								{
