--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -1,5 +1,9 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@{
+	var requestCulture = Context.Features.Get<Microsoft.AspNetCore.Localization.IRequestCultureFeature>();
+}
+
+<!DOCTYPE html>
+<html lang="@requestCulture?.RequestCulture.UICulture.TwoLetterISOLanguageName">
 
 <head>
 	<meta charset="utf-8" />
