--- a/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
+++ b/Structured Cabling Studio/Views/Project/ProjectInformation.cshtml
@@ -3,7 +3,7 @@
 }
 
 <p>
-	<span style="font-size:1.5rem;">@Localizer["Author of project"] &#8211; Pavel (Rhoxolan) Batsemakin</span>
+	<span style="font-size:1.5rem;">@Localizer["Author of project"] &#8211; @Localizer["AuthorName"]</span>
 	<br />
 	<span style="font-size:1.1rem;">@Localizer["Profile"] GitHub - <a href="https://github.com/Rhoxolan" target="_blank">github.com/Rhoxolan</a></span>
 	<br />
